--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-   
+  <header>
+    <!-- navbar -->
+     <nav class="containar">
+        <div class="nav-heading">
+            <h3><i>Fitness</i></h3>
+        </div>
+        <div class="nav-option">
+            <p>Home</p>
+            <p>Service</p>
+            <p>Contact</p>
+            <p>About</p>
+        </div>
+     </nav>
+
+
+  </header>
+
+  <main>
+    <!-- banner -->
+     <section class="banner-section">
+        <div class="banner-text">
+
+        </div>
+
+        <div class="banner-image">
+
+        </div>
+
+
+     </section>
+
+
+  </main>
+
+  <footer>
+
+
+  </footer>
+
 </body>
-</html>                 
