--- a/index.html
+++ b/index.html
@@ -93,6 +93,65 @@
      </section>
      <!-- run section end -->
 
+
+
+     <!-- BMI chart start -->
+      <section class="BMI">
+        <div class="BMI-colum">
+            <h2>BMI Calculator Chart</h2>
+            <table>
+                <tr>
+                    <th>BMI </th>
+                    <th>Weight Status</th>
+                </tr>
+                <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                </tr>
+                <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                </tr>
+                <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                </tr>
+                <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                </tr>
+            </table>
+        </div>
+        <div class="BMI-colum"> 
+            <h2>
+                Calculate your BMI
+            </h2>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
+            <input type="text" placeholder="Height/cm">
+            <input type="text" name="" id="" placeholder="Weight/kg"> <br>
+            <input type="text" name="" id="" placeholder="Age">
+            <input type="text" placeholder="sex" id="sex">
+            <label for="sex"><select name="" id="">
+                <option value=""></option>
+                <option value=""></option>
+            </select></label> <br>
+            <input type="text" placeholder="Select an activity factor"> <br>
+            <button>Calculate</button>
+            
+            
+
+        </div>
+
+
+      </section>
+
+
+
+
+
+
+
+
      <!-- exercises section start -->
       <!-- <section class="exercises">
         <div class="exercise">
