--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <p>Free Workout Videos</p>
             </div>
 
+            <div class="play-icon"><i class="fa-solid fa-play"></i></div>
+
 
         </div>
 
