--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="selector"><input type="text" placeholder="Height/cm">
             <input type="text" name="" id="" placeholder="Weight/kg">
             <input type="text" name="" id="" placeholder="Age">
-            <select name="" id="">
+            <select name="" class="long">
                 <option value="">Sex</option>
             </select>
            </div>
